css/main.scss
$col1: #3e494d;
$col2: #abcc85;
$col3: #6c86a2;
$col4: #cbd0c6;
$col5: #c56666;
$col6: #a0bad8;
$nav: #576a7c;
$white: #fff;
$shadow: 0 2px 4px rgba(0, 0, 0, .24);
$xsmall: 480px;
$small: 768px;
$medium: 992px;
$large: 1200px;

//Mixin to create box-shadows similiar to the Google Design Specs
//Based on: https://css-tricks.com/snippets/sass/material-shadows-mixin/
@mixin box-shadow($level) {
	@if $level < 1 {
		box-shadow: none;
	} @else if $level > 5 {
		box-shadow: bottom-shadow(5), top-shadow(5);
	} @else {
		box-shadow: bottom-shadow($level), top-shadow($level);
	}
}

//Function to generate the top-shadow of the box-shadow mixin
//Based on these figures: https://lh3.googleusercontent.com/-C-BFrMtT-cw/U6tNB2jQe4I/AAAAAAAAEHU/8JbHc_7vkLQ/w480-h480/Screen%2BShot%2B2014-06-26%2Bat%2B00.28.09.png#
@function top-shadow($level) {
	$y-offset: nth(1 3 10 14 19, $level) * 1px;
	$blur: nth(1.5 3 10 14 19, $level) * 4px;
	$color: rgba(0, 0, 0, nth(.12 .16 .19 .25 .30, $level));

	@return 0 $y-offset $blur $color;
}

@function bottom-shadow($level) {
	$y-offset: nth(1 3 6 10 15, $level) * 1px;
	$blur: nth(1 3 3 5 6, $level) * 4px;
	$color: rgba(0, 0, 0, nth(.24 .23 .23 .22 .22, $level));

	@return 0 $y-offset $blur $color;
}

//Function to calculate values based off an 8px grid.
@function grid($val) {
	@return 8px * $val;
}

*,
*::before,
*::after {
	box-sizing: inherit;
}

html {
	box-sizing: border-box;
	font: 12px Raleway, sans-serif;

	@media only screen and (min-width : $small) {
		font-size: 16px;
	}
}

body {
	background-color: $white;
	margin: 0;
	text-shadow: $shadow;
	color: $white;
}

h1 {
	color: $col2;
	font: 4rem Satisfy, cursive;
	line-height: 5rem;
	margin: 0;
	width: 100%;
}

h2 {
	color: $col2;
	font: 2.5rem Satisfy, cursive;
	height: 3.5rem;
	line-height: 3.5rem;
	overflow: hidden;
}

h3 {
	font-size: 1.5rem;
	line-height: 2rem;
	margin: grid(1);
	width: 100%;
}

h4 {
	@extend h3;
	color: $col2;
	font-family: Satisfy, cursive;
	font-size: 24px;
}

a {
	color: $col2;
	font-weight: bold;
	text-decoration: none;

	&:hover {
		border-bottom: 1px dotted;
	}
}

main {
	display: flex;
	flex-flow: column wrap;
	max-width: 1280px;
}

section {
	flex: 1;
	min-height: 100vh;
	padding: 0 0 grid(5);

	&:last-child {
		padding: 0;
	}
}

.home {
	background-color: $col1;
}

.skills {
	background-color: $col3;
}

.portfolio {
	background-color: $col4;
}

.contact {
	background-color: $col5;
}

nav {
	@include box-shadow(4);
	align-items: center;
	background-color: $nav;
	display: flex;
	flex-flow: row nowrap;
	height: grid(10);
	justify-content: center;
	margin-bottom: grid(5);
}

.nav-title {
	display: none;
	flex: 1 1 auto;
	margin-left: grid(8);

	@media only screen and (min-width : $small) {
		display: block;
    }
}

ul {
	padding: 0;
}

.nav-menu {
	display: flex;
	flex: 2 1 auto;
	justify-content: center;
	list-style: none;

	@media only screen and (min-width : $small) {
		justify-content: flex-end;
		margin-right: grid(8);
    }

	li {
		padding: 1rem;

		&:first-child {
			padding-left: 0;
		}

		&:last-child {
			padding-right: 0;
		}

		a {
			color: $white;
			font-size: 1.5rem;
		}

		.active {
			border-bottom: 1px dotted;
			color: $col2;
		}
	}
}

.row {
	display: flex;
	flex-flow: row wrap;
	justify-content: center;
	margin: 0 auto;
	max-width: 960px;

	.column {
		flex-basis: 100%;
		padding: 0 grid(1);
		text-align: center;

		@media only screen and (min-width : $small) {
			flex: 1;
    	}

		p {
			line-height: 1.25rem;
			margin: 1.25rem 0;
		}
	}

	.two-thirds {
		flex: 2;
	}
}

.header-img {
	margin-top: -64px;
	position: relative; 
	height: 0; 
	width: 100%; 
	padding: 0;
	padding-bottom: 100%; 
}

.skills-row {
	@extend .row;
	align-content: space-around;
	justify-content: space-around;

	.column {
		flex: 0 0 auto;
	}
}

.portfolio-square {
	@include box-shadow(3);
	background-image: url(../img/rumour.png);
	background-color: $col1;
	flex-basis: auto;
	margin: grid(1);
	height: 216px;
	width: 216px;
	text-align: justify;
	position: relative;
	overflow: hidden;

	.overlay {
		position: absolute;
		top: 168px;
		background-color: rgba($col1, .5);
		display: flex;
		justify-content: center;
		align-items: flex-start;
		flex-flow: row wrap;
		padding: 0 grid(1);
		height: 216px;
		width: 216px;
		transition: all 1s ease-in-out;

		&:hover {
			background-color: rgba($col1, .75);
			top: 0;
			padding: grid(1);
		}
	}

	p {
		font-size: 12px;
		padding: 0;
		margin: 0;
	}

	span {
		color: $col6;
		align-self: flex-end;
		width: 100%;
		font-size: 16px;
	}

	.button {
		align-self: flex-end;
		cursor: pointer;
	}
}

.button {
	@include box-shadow(1);
	align-content: center;
	align-items: center;
	background-color: $col2;
	border: 1px solid $col1;
	border-radius: 2px;
	color: $col1;
	display: flex;
	font-size: 12px;
	font-weight: bold;
	height: grid(3);
	justify-content: center;
	line-height: 1rem;
	margin: grid(.5);
	width: grid(10);
}

.scaling-svg {
	position: absolute; 
	height: 100%; 
	width: 100%; 
	left: 0; 
	top: 0;
}

form {
	margin: 0 auto;
	label {
		display: block;
		margin-top: grid(2);
		margin-bottom: -24px;
		font: 2.5rem Satisfy, cursive;
		line-height: 3.5rem;
		color: $col2;
		z-index: 2;
		position: relative;
	}

	.text {
		position: relative;
		z-index: 1;
		background-color: $nav;
		border: none;
		width: grid(38);
	}

	input.text {
		height: grid(4);
	}

	textarea.text {
		height: grid(20);
		display: block;
		margin-bottom: grid(2.5);
	}

	.button {
		display: inline;
	}

	.buttons {
		margin: 0 auto;
		text-align: center;
	}
}

.social-bar {
	flex-basis: 100%;
	display: flex;
	justify-content: center;
	list-style: none;
	align-self: flex-end;
}

.social-btn {
	width: grid(8);
	height: grid(8);
	background-color: $white;
	border: 2px solid $col3;
	border-radius: 50%;
	margin: grid(1);
}

